+ Object-oriented programming sytle
+ class network_simiulation_sequential

--- a/qvoter_vs/qvoter_vs.vcxproj.filters
+++ b/qvoter_vs/qvoter_vs.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="..\network_sim.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\network_sim.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
