--- a/qvoter_vs/qvoter_vs.vcxproj
+++ b/qvoter_vs/qvoter_vs.vcxproj
@@ -115,7 +115,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\main.cpp" />
     <ClCompile Include="..\network_sim.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\network_sim.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
