--- a/qvoter_vs/qvoter_vs.vcxproj.filters
+++ b/qvoter_vs/qvoter_vs.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="..\main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\network_sim_parallel.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\network_sim.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\network_sim_parallel.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
