--- a/qvoter_vs/qvoter_vs.vcxproj
+++ b/qvoter_vs/qvoter_vs.vcxproj
@@ -117,9 +117,11 @@
   <ItemGroup>
     <ClCompile Include="..\main.cpp" />
     <ClCompile Include="..\network_sim.cpp" />
+    <ClCompile Include="..\network_sim_parallel.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\network_sim.h" />
+    <ClInclude Include="..\network_sim_parallel.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
