--- a/qvoter_vs/qvoter_vs.vcxproj.filters
+++ b/qvoter_vs/qvoter_vs.vcxproj.filters
@@ -32,6 +32,9 @@
     <ClInclude Include="..\network_sim_parallel.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\dirent.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\Makefile" />
